# Real-Time-Ambient-Occlusion

./: CMakeLists.txt  README.md  SetupHelp.txt  Validation.h  main.cpp
Application/: Application.cpp  Application.h
Camera/: Camera.cpp  Camera.h
Commands/: CommandPool.cpp  CommandPool.h  Commandbuffer.cpp  Commandbuffer.h
Descriptors/: DescriptorLayout.cpp  DescriptorLayout.h  DescriptorPool.cpp  DescriptorPool.h
Device/: Device.cpp  Device.h
Framebuffer/: Framebuffer.cpp  Framebuffer.h
ImGui/: ImGui.cpp  ImGui.h
Model/: Model.cpp  Model.h  tinyobjloader.cpp
Pipelines/: Pipelines.cpp  Pipelines.h
Renderer/: RenderData.h  Renderer.cpp  Renderer.h  Semaphore.cpp  Semaphore.h
Renderpass/: Renderpass.cpp  Renderpass.h
Resources/: Buffer.cpp  Buffer.h  FileLoad.cpp  FileLoad.h  Image.cpp  Image.h  Memory.h
Shaders/: base.frag  base.vert  basevert.spv  compile.bat
Shaders/GBuffer/: gbuffer.frag  gbuffer.vert  gbufferfrag.spv  gbuffervert.spv
Shaders/Postprocessing/: AlchemyAO.frag  AlchemyAO.spv  Blur.frag  Blur.spv  HBAO.frag  HBAO.spv  Lighting.frag  Lighting.vert  Lightingfrag.spv  Lightingvert.spv  Quad.frag  Quad.vert  Quadfrag.spv  Quadvert.spv  SSAO.frag  SSAOfrag.spv  SSR.frag.spv  SSRfrag.frag  Shadow.frag  Shadow.frag.spv  Shadow.vert  Shadow.vert.spv  Specular.frag  Specular.spv
Structs/: Shaders.h  vk.h
Swapchain/: Swapchain.cpp  Swapchain.h
Window/: Window.cpp  Window.h
libs/: stb_image.h
libs/glfw-3.3.4/tests/: triangle-vulkan.c
libs/tinyobjloader/: CMakeLists.txt
